# MaxLib

./: .gitignore  CMakeLists.txt  MaxLib.h  QuickGit.sh  QuickInstall.sh
Devices/ADS1115/: ads1115.cpp  ads1115.h
File/: CMakeLists.txt  File.cpp  File.h
Geom/: CMakeLists.txt  Geom.cpp  Geom.h
String/: String.cpp  String.h
Vector/: Vector.h  Vector_Impl.h
